--- a/config/database.yml
+++ b/config/database.yml
@@ -58,6 +58,12 @@ development:
 test:
   <<: *default
   database: jewelry_backend_test
+  <<: *default
+  
+  username: luis
+  password: password
+  host: localhost
+  port: 5432
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
