enabled config.force_ssl on production environment

--- a/config/database.yml
+++ b/config/database.yml
@@ -84,8 +84,8 @@ test:
   production:
     url: <%= ENV['DATABASE_URL'] %>
 #
-production:
-  <<: *default
-  database: jewelry_backend_production
-  username: jewelry_backend
-  password: <%= ENV['PORTFOLIO_DATABASE_PASSWORD'] %>
+# production:
+#   <<: *default
+#   database: jewelry_backend_production
+#   username: jewelry_backend
+#   password: <%= ENV['PORTFOLIO_DATABASE_PASSWORD'] %>
